1、修改tag样式 2、Links支持图标 3、头像改成圆形

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: blnx@卞留念 de 博客
+title: blnx@卞留念
 subtitle:
-description: 成为更优秀的自己
+description: Do my best! Be a better man!
 author: 卞留念
 language: zh-Hans
 timezone: Asia/Shanghai
