--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -38,9 +38,10 @@ seo: true
 # When running the site in a subdirectory (e.g. domain.tld/blog), remove the leading slash (/archives -> archives)
 menu:
   home: /
-  categories: /categories
+#  categories: /categories
+  resume: /resume
   about: /about
-#  archives: /archives
+  archives: /archives
   tags: /tags
 #  sitemap: /sitemap.xml
 #  commonweal: /404.html
@@ -62,6 +63,7 @@ menu_icons:
   archives: archive
   sitemap: sitemap
   commonweal: heartbeat
+  resume : fire
 
 
 
@@ -72,8 +74,8 @@ menu_icons:
 
 # Schemes
 #scheme: Muse
-#scheme: Mist
-scheme: Pisces
+scheme: Mist
+#scheme: Pisces
 
 
 # ---------------------------------------------------------------
@@ -133,9 +135,10 @@ font:
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
+social:
   #LinkLabel: Link
-
+  GitHub: https://github.com/mrbian
+  GitOschina: http://git.oschina.net/mrbian
 
 # Social Links Icons
 # Icon Mapping:
@@ -146,8 +149,8 @@ social_icons:
   enable: true
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
-  GitHub: https://github.com/mrbian
-  知乎: https://www.zhihu.com/people/bianliunian
+  GitHub: github
+  GitOschina: http://static.oschina.net/uploads/logo/gitosc_F7OXZ.png
 #  Twitter: twitter
 #  Weibo: weibo
 
@@ -182,8 +185,8 @@ sidebar:
   #  - always  expand for all pages automatically
   #  - hide    expand only when click on the sidebar toggle icon.
   #  - remove  Totally remove sidebar including sidebar toggle.
-  display: post
-  #display: always
+#  display: post
+  display: always
   #display: hide
   #display: remove
 
@@ -203,7 +206,7 @@ sidebar:
 #links_layout: block
 #links_layout: inline
 #links:
-  #Title: http://example.com/
+#  Title: http://example.com/
 
 
 # ---------------------------------------------------------------
@@ -219,7 +222,7 @@ excerpt_description: true
 # Automatically Excerpt. Not recommend.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: false
+  enable: true
   length: 150
 
 # Post meta display settings
@@ -399,7 +402,7 @@ leancloud_visitors:
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 busuanzi_count:
   # count values only if the other configs are false
-  enable: false
+  enable: true
   # custom uv span for the whole site
   site_uv: true
   site_uv_header: <i class="fa fa-user"></i>
@@ -410,7 +413,7 @@ busuanzi_count:
   site_pv_footer:
   # custom pv span for one page only
   page_pv: true
-  page_pv_header: <i class="fa fa-file-o"></i>
+  page_pv_header: <i class="fa fa-eye"></i>
   page_pv_footer:
 
 
