发表大数据出书记 文章内部图片居中

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -165,7 +165,7 @@ toc:
   enable: true
 
   # Automatically add list number to toc.
-  number: true
+  number: false
 
 
 # Creative Commons 4.0 International License.
@@ -185,8 +185,8 @@ sidebar:
   #  - always  expand for all pages automatically
   #  - hide    expand only when click on the sidebar toggle icon.
   #  - remove  Totally remove sidebar including sidebar toggle.
-#  display: post
-  display: always
+  display: post
+#  display: always
   #display: hide
   #display: remove
 
